Ejercicio 10 refactorizacion del ejercicio 6 utilizando binding.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E2ED73"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="82dp"
-        android:layout_height="105dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="215dp"
+        android:layout_height="228dp"
+        android:layout_marginTop="40dp"
         android:background="#0003A9F4"
         android:contentDescription="@string/todo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,77 +22,77 @@
 
     <EditText
         android:id="@+id/textName"
-        android:layout_width="0dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="32dp"
         android:autoText="false"
         android:autofillHints=""
         android:ems="10"
         android:inputType="text|textPersonName"
         android:text="@string/ingrese_nombre"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:ignore="Deprecated,LabelFor" />
 
     <EditText
         android:id="@+id/textFirstName"
-        android:layout_width="0dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="text"
         android:text="@string/ingrese_apellido"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textName" />
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="@+id/textName"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textName"
+        app:layout_constraintTop_toBottomOf="@+id/textName"
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/textPass"
-        android:layout_width="0dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/pass"
         android:inputType="textPassword"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textEmail" />
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="@+id/textEmail"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textEmail"
+        app:layout_constraintTop_toBottomOf="@+id/textEmail"
+        tools:ignore="TextContrastCheck" />
 
     <EditText
         android:id="@+id/textEmail"
-        android:layout_width="0dp"
+        android:layout_width="330dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="26sp"
+        app:layout_constraintEnd_toEndOf="@+id/textFirstName"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textFirstName"
         app:layout_constraintTop_toBottomOf="@+id/textFirstName"
         tools:text="Correo Electronico" />
 
     <Button
         android:id="@+id/btnCreate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CREAR CUENTA"
+        android:layout_width="291dp"
+        android:layout_height="103dp"
+        android:backgroundTint="#2196F3"
+        android:contentDescription="@string/boton"
+        android:text="@string/crear_cuenta"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textPass"
         app:layout_constraintHorizontal_bias="0.498"
